# lua-ffi

./: Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml  uniffi-kmp.toml
.cargo/: config.toml
libkmp/: .gitignore  gradle.properties  settings.gradle.kts
libkmp/gradle/: libs.versions.toml
libkmp/lau-kmp/: build.gradle.kts  proguard.pro
libkmp/lau-kmp/src/androidHostTest/kotlin/: AndroidFfiTest.kt
libkmp/lau-kmp/src/androidMain/kotlin/org/siamdev/klua/: lua_ffi.android.kt
libkmp/lau-kmp/src/commonMain/kotlin/org/siamdev/klua/: lua_ffi.common.kt
libkmp/lau-kmp/src/commonTest/kotlin/: FfiTest.kt
libkmp/lau-kmp/src/jvmMain/kotlin/org/siamdev/klua/: lua_ffi.jvm.kt
libkmp/lau-kmp/src/jvmTest/kotlin/: JvmFfiTest.kt
libkmp/lau-kmp/src/nativeInterop/cinterop/: lua_ffi.def
libkmp/lau-kmp/src/nativeInterop/cinterop/headers/lua_ffi/: lua_ffi.h
libkmp/lau-kmp/src/nativeMain/kotlin/org/siamdev/klua/: lua_ffi.native.kt
src/: config.rs  error.rs  lib.rs  value.rs  vm.rs
tests/: errors.rs  functions.rs  hooks.rs  lua_versions.rs  lua_vm.rs  native_module.rs  registry.rs  scope.rs  tables.rs  threads.rs  userdata.rs  values.rs  vm.rs
